# rngminder

./: .gitignore  Makefile.am  README.md  autogen.sh  configure.ac
doc/: Doxyfile
src/: main.c
tests/: testsuite.at
